--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
+    "styled-normalize": "^8.0.7",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
