--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build && scp -r ./build/* rileydanejohnston@my-news-explorer.students.nomoreparties.sbs:/home/rileydanejohnston/news-explorer-backend/build"
   },
   "eslintConfig": {
     "extends": [
